build: cross-compile to Java 17 (--release 17)
Drop the bytecode floor from Java 25 to Java 17 LTS so the wide enterprise
audience still on 17 can consume the library — including the codegen-emitted
navigators and bridges. Java 25 stays the toolchain target; only the
`--release` API surface and the language features tighten.

Mechanical changes (Java 17 → 25):
- All 13 module `build.gradle.kts` files: `options.release = 25` → `17`.
- 4 annotation processors: `@SupportedSourceVersion(RELEASE_25)` → `RELEASE_17`.
- Unnamed variables (`_`, JEP 456 — Java 22+) renamed to `__` at 12 lambda
  and switch-pattern sites across `DeepMap`, `Edit`, `LambdaIntrospection`,
  `HttpEffectsIntegrationTest`, `RedactedOrderTelescopes`.

Language-feature rewrites:
- Pattern-match switch expressions (JEP 441 — Java 21+) rewritten as
  `instanceof` chains with `throw new IllegalStateException("unreachable…")`
  fallthrough in `Either`, `Validated`, `EitherK`, `DeepMap`,
  `ValidatedOrderController`.
- Record patterns in `instanceof` (JEP 440 — Java 21+) rewritten as type-pattern
  `instanceof` + accessor calls in `Validated.combine`, `ValidatedK.map2`,
  `DeepMap.extractDefaultStrategy`.
- `List.getFirst()` (JEP 431 — Java 21+) → `list.get(0)` across `codegen`
  processors, example demos, and tests.
- `try-with-resources` on `ExecutorService` (Java 19+ — `AutoCloseable`) →
  `try/finally { shutdown() }` in `BoundedAsyncTest` and the `Telescope`
  javadoc example.

Codegen emission:
- `BridgeProcessor` sealed-bridge dispatch now emits an `instanceof` chain
  instead of a pattern-match switch, so the generated code itself compiles
  under `-source 17`. Matching test assertions updated.

BridgeTelescope visibility:
- `Telescope.BridgeTelescope` lifted from `private` to package-private — Java
  17's sealed-permits accessibility check is stricter; the rest of the
  encapsulation stays intact.

README: Maven Central / Javadoc badges point to `telescope-core` (the
published artifact ID); JVM ba