@@ -99,9 +99,9 @@ class AllOverTest {
         over(TEAM_NAMES, String::trim),
         over(USER_NAMES, String::toUpperCase)
       ).apply(company);
-      assertEquals("Engineering", out.departments().getFirst().name());
-      assertEquals("Platform", out.departments().getFirst().teams().get(0).name());
-      assertEquals("ALICE", out.departments().getFirst().teams().getFirst().users().getFirst().name());
+      assertEquals("Engineering", out.departments().get(0).name());
+      assertEquals("Platform", out.departments().get(0).teams().get(0).name());
+      assertEquals("ALICE", out.departments().get(0).teams().get(0).users().get(0).name());
       assertEquals("alice@acme.com", out.departments().get(0).teams().get(0).users().get(0).email());
     }
 
@@ -144,9 +144,9 @@ class AllOverTest {
       );
       final var out1 = normalize.apply(company1);
       final var out2 = normalize.apply(company2);
-      assertEquals("Engineering", out1.departments().getFirst().name());
-      assertEquals("Ops", out2.departments().getFirst().name());
-      assertEquals("z@bingo.com", out2.departments().getFirst().teams().getFirst().users().getFirst().email());
+      assertEquals("Engineering", out1.departments().get(0).name());
+      assertEquals("Ops", out2.departments().get(0).name());
+      assertEquals("z@bingo.com", out2.departments().get(0).teams().get(0).users().get(0).email());
     }
   }
 
@@ -178,7 +178,7 @@ class AllOverTest {
     void directNonNullReplaces() {
       final var company = sample();
       final var out = Telescope.all(Edit.overIfPresent(DEPT_NAMES, "Engineering")).apply(company);
-      assertEquals("Engineering", out.departments().getFirst().name());
+      assertEquals("Engineering", out.departments().get(0).name());
     }
 
     @Test
@@ -194,7 +194,7 @@ class AllOverTest {
     void mapperFormApplies() {
       final var company = sample();
       final var out = Telescope.all(Edit.overIfPresent(DEPT_NAMES, "  trimmed  ", String::trim)).apply(company);
-      assertEquals("trimmed", out.departments().getFirst().name());
+      assertEquals("trimmed", out.departments().get(0).name());
     }
 
     @Test
@@ -216,7 +216,7 @@ class AllOverTest {
       final var out = Telescope.all(
         Edit.mapIfPresent(EMAILS, "@DOMAIN", (suffix, email) -> email + suffix.toLowerCase())
       ).apply(company);
-      assertEquals("ALICE@ACME.COM@domain", out.departments().getFirst().teams().getFirst().users().getFirst().email());
+      assertEquals("ALICE@ACME.COM@domain", out.departments().get(0).teams().get(0).users().get(0).email());
     }
 
     @Test
@@ -241,13 +241,13 @@ class AllOverTest {
         Edit.<Company, String, String>overIfPresent(USER_NAMES, null, String::toUpperCase),
         Edit.mapIfPresent(EMAILS, "!", (bang, email) -> email + bang)
       ).apply(company);
-      assertEquals(company.departments().getFirst().name(), out.departments().getFirst().name());
-      assertEquals("Renamed", out.departments().getFirst().teams().getFirst().name());
+      assertEquals(company.departments().get(0).name(), out.departments().get(0).name());
+      assertEquals("Renamed", out.departments().get(0).teams().get(0).name());
       assertEquals(
-        company.departments().getFirst().teams().getFirst().users().getFirst().name(),
-        out.departments().getFirst().teams().getFirst().users().getFirst().name()
+        company.departments().get(0).teams().get(0).users().get(0).name(),
+        out.departments().get(0).teams().get(0).users().get(0).name()
       );
-      assertEquals("ALICE@ACME.COM!", out.departments().getFirst().teams().getFirst().users().getFirst().email());
+      assertEquals("ALICE@ACME.COM!", out.departments().get(0).teams().get(0).users().get(0).email());
     }
   }
 }
